# Personalized-Recommendation-System

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  render.yaml  requirements.txt  security_checklist.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: maintenance-request.md
.github/workflows/: ci.yml
app/: streamlit_app.py
backend/: main.py
backend/api/: endpoints.py
backend/core/: config.py
backend/models/: movie.py
backend/services/: recommender.py
data/demo/: recommendations.db
docs/: enriched_data_analysis.md  jupyter_kernel_setup.md
notebooks/: 01_EDA_in_R.Rmd  02_EDA_Enriched.ipynb  03_Content_Recommender.ipynb  04_Collaborative_Recommender.ipynb  05_SVD_Plan_Surprise_Placeholder.ipynb
notebooks/dev/: 03_Content_Dev_Notebook.ipynb
postman/collections/: movie-recommender-collection.json
postman/environments/: movie-recommender-env-render.json  movie-recommender-env.json
scripts/: init_db.sql  init_sqlite_db.py  load_data_to_db.py  load_demo_to_db.py  reduce_dataset_for_demo.py
scripts/dev/: convert_dat_to_csv.py
src/: check_enriched_movies.py  collaborative_filtering.py  content_based.py  convert_dat_to_csv.py  enrich_movies.py  hybrid_recommendation.py  mongo_test.py
src/db/: repository.py  sqlite_client.py
src/services/: recommender_service.py
src/ui/: components.py  helpers.py  tmdb.py
tests/: README.md  test_api.py  test_collaborative_filtering.py  test_content_based.py
