[tool.poetry]
name = "personalized-recommendation-system"
version = "0.1.0"
description = "A personalized recommendation system for movies using MovieLens as main dataset"
authors = ["Alejandro Matías Astorga <alejandromatiasastorga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
numpy = "^2.2.6"
plotly = "^6.1.1"
scikit-learn = "^1.6.1"
surprise = "^0.1"
pymongo = "^4.13.0"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
