[tool.poetry]
name = "personalized-recommendation-system"
version = "0.1.0"
description = "A personalized recommendation system for movies using MovieLens as main dataset"
authors = ["Alejandro Matías Astorga <alejandromatiasastorga@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
numpy = "^2.2.6"
plotly = "^6.1.1"
scikit-learn = "^1.6.1"
surprise = "^0.1"
pymongo = "^4.13.0"
requests = "^2.32.4"
python-dotenv = "^1.1.0"
dotenv = "^0.9.9"
joblib = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.11"
pre-commit = "^4.2.0"
watchdog = "^6.0.0"
streamlit = "^1.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]